<resources>
    <string name="app_name">Bus Reservation System</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="signup">Signup</string>
    <string name="login">login</string>
    <string name="booked">Booked</string>
    <string name="company_show">\"company : \"</string>
    <string name="filter_by">Filter by:</string>
    <string name="company_name">company</string>
    <string name="source_city_name">source city</string>
    <string name="destination_city_name">destination city</string>
    <string name="trip_is_cancelled">trip is cancelled</string>
    <string name="go_to_profile">go to profile</string>
    <string name="edit">edit</string>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="logout">logout</string>
    <string name="main">Main</string>
    <string name="trips">Trips</string>
    <string name="my_profile">My profile</string>
    <string name="enter_previous_password">enter your new previous password</string>
    <string name="enter_new_password">enter your new password</string>
    <string name="enter_new_password_again">enter your new password again</string>
    <string name="enter_new_first_name">enter your new first name</string>
    <string name="enter_new_last_name">enter your new last name</string>
    <string name="enter_your_new_phone_number">enter your new phone number</string>
    <string name="password_doesnt_match">password doesn\'t match with password confirmation</string>
</resources>