<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Signup">
    <EditText
        android:id="@+id/passenger_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:hint="@string/enter_your_first_name"
        android:singleLine="true"

        />

    <EditText
        android:id="@+id/passenger_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passenger_firstname"
        app:layout_constraintEnd_toEndOf="parent"


        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:hint="@string/enter_your_last_name"
        android:singleLine="true"

        />
    <EditText
        android:id="@+id/passenger_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passenger_lastname"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:hint="@string/enter_your_phone_number"
        android:singleLine="true"
        android:inputType="number"

        />
    <EditText
        android:id="@+id/passenger_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passenger_phonenumber"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:inputType="textPassword"

        android:hint="@string/enter_your_password"
        android:singleLine="true"

        />

    <EditText
        android:id="@+id/passenger_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passenger_password"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:inputType="textPassword"

        android:hint="@string/enter_your_password"
        android:singleLine="true"

        />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passenger_password_confirmation"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"

        android:text="@string/signup"
        />


</androidx.constraintlayout.widget.ConstraintLayout>