<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Trips"
    android:background="@drawable/trips_background"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/filter_by"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_by"
        >


        <AutoCompleteTextView
            android:id="@+id/company_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/company_name"
            android:ems="5"

            />

        <AutoCompleteTextView
            android:id="@+id/source_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/source_city_name"
            android:layout_marginStart="5dp"
            android:ems="5"
            />

        <AutoCompleteTextView
            android:id="@+id/destination_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/destination_city_name"
            android:layout_marginStart="5dp"
            android:ems="7"
            />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/filter_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trips"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>